--- a/ui/player.ui
+++ b/ui/player.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>909</width>
-    <height>569</height>
+    <width>728</width>
+    <height>623</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -129,7 +129,7 @@
    <item row="0" column="1">
     <widget class="QLineEdit" name="le_bag">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
@@ -146,6 +146,12 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>100</width>
+       <height>0</height>
+      </size>
      </property>
      <property name="maximumSize">
       <size>
@@ -165,6 +171,12 @@
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>100</width>
+       <height>0</height>
+      </size>
      </property>
      <property name="maximumSize">
       <size>
@@ -191,12 +203,6 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>120</width>
-          <height>0</height>
-         </size>
-        </property>
         <property name="text">
          <string>Play</string>
         </property>
@@ -204,9 +210,15 @@
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_15">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>84</width>
+          <width>70</width>
           <height>16777215</height>
          </size>
         </property>
@@ -217,9 +229,15 @@
       </item>
       <item row="1" column="1">
        <widget class="QSpinBox" name="sb_offset">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>83</width>
+          <width>70</width>
           <height>16777215</height>
          </size>
         </property>
@@ -233,9 +251,15 @@
       </item>
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="sb_rate">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>83</width>
+          <width>70</width>
           <height>16777215</height>
          </size>
         </property>
@@ -264,9 +288,12 @@
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Preferred</enum>
+        </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>297</width>
+          <width>100</width>
           <height>0</height>
          </size>
         </property>
@@ -274,9 +301,15 @@
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_16">
+        <property name="minimumSize">
+         <size>
+          <width>70</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="maximumSize">
          <size>
-          <width>84</width>
+          <width>70</width>
           <height>16777215</height>
          </size>
         </property>
@@ -296,12 +329,6 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
-        <property name="minimumSize">
-         <size>
-          <width>120</width>
-          <height>0</height>
-         </size>
-        </property>
         <property name="text">
          <string>Pause</string>
         </property>
@@ -317,12 +344,6 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>120</width>
-          <height>0</height>
-         </size>
         </property>
         <property name="text">
          <string>Reset</string>
@@ -342,13 +363,13 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>80</width>
+       <width>60</width>
        <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>80</width>
+       <width>60</width>
        <height>16777215</height>
       </size>
      </property>
