--- a/ui/node_monitor.ui
+++ b/ui/node_monitor.ui
@@ -52,11 +52,7 @@
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QComboBox" name="cb_ns">
-        <property name="placeholderText">
-         <string>grep namespace</string>
-        </property>
-       </widget>
+       <widget class="QComboBox" name="cb_ns"/>
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="label_3">
@@ -78,11 +74,7 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QComboBox" name="cb_node">
-        <property name="placeholderText">
-         <string>node name</string>
-        </property>
-       </widget>
+       <widget class="QComboBox" name="cb_node"/>
       </item>
       <item row="5" column="1">
        <widget class="QScrollArea" name="scrollArea">
@@ -150,31 +142,6 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0" rowspan="2">
-       <widget class="QLabel" name="label_10">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>100</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>100</width>
-          <height>16777215</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>Node</string>
-        </property>
-       </widget>
-      </item>
       <item row="2" column="2" rowspan="2">
        <widget class="QPushButton" name="pb_update">
         <property name="sizePolicy">
@@ -197,6 +164,38 @@
         </property>
         <property name="text">
          <string>Update</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_10">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>100</width>
+          <height>16777215</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Node Name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Namespace</string>
         </property>
        </widget>
       </item>
