--- a/ui/stylesheet.css
+++ b/ui/stylesheet.css
@@ -2,7 +2,7 @@
 QWidget
 {
     color: white;
-    background-color: black;
+    background-color: rgb(24, 24, 24);
 }
 
 QWidget:disabled
@@ -10,9 +10,11 @@ QWidget:disabled
     color: gray;
 }
 
-Line
+QFrame[frameShape="4"],
+QFrame[frameShape="5"]
 {
-    background-color: rgb(43, 43, 43);
+    color: rgb(43, 43, 43);
+    border: 1px solid rgb(43, 43, 43);
 }
 
 QScrollArea
@@ -35,7 +37,7 @@ QGroupBox::title {
 
 QLabel
 {
-    color: gray;
+    color: rgb(170, 170, 170);
 }
 
 /* QWidget:item:hover
@@ -58,24 +60,26 @@ QWidget:item:selected
 
 QPushButton
 {
-    border: 3px solid rgb(53, 53, 255);
-    border-radius: 3px;
     padding: 3px;
+    border-style: solid;
+    border-radius: 3px;
+    background-color: rgb(53, 53, 255);
 }
 
 QPushButton:hover
 {
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(129, 129, 255);
 }
 
 QPushButton:pressed
 {
-    border: 3px solid white;
+    color: rgb(53, 53, 255);
+    background-color: rgb(255, 255, 255);
 }
 
 QPushButton:disabled
 {
-    border: 1px solid gray;
+    background-color: rgb(43, 43, 43);
 }
 
 QLineEdit, QComboBox
@@ -96,6 +100,7 @@ QPlainTextEdit, QListWidget
     border-style: solid;
     background-color: rgb(43, 43, 43);
     selection-background-color: rgb(53, 53, 255);
+    color: rgb(170, 170, 170);
 }
 
 QSpinBox, QDoubleSpinBox
@@ -112,7 +117,7 @@ QScrollBar {
 
 QScrollBar::handle
 {
-    background: rgb(53, 53, 255);
+    background: rgb(95, 95, 95);
 }
 
 QScrollBar::add-line, QScrollBar::sub-line
@@ -120,33 +125,6 @@ QScrollBar::add-line, QScrollBar::sub-line
     border: none;
     background: none;
 }
-
-/* QHeaderView::section
-{
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #616161, stop: 0.5 #505050, stop: 0.6 #434343, stop:1 #656565);
-    color: white;
-    padding-left: 4px;
-    border: 1px solid #6c6c6c;
-}
-
-QMainWindow::separator
-{
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #161616, stop: 0.5 #151515, stop: 0.6 #212121, stop:1 #343434);
-    color: white;
-    padding-left: 4px;
-    border: 1px solid #4c4c4c;
-    spacing: 3px;
-}
-
-QMainWindow::separator:hover
-{
-
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:0 #d7801a, stop:0.5 #b56c17 stop:1 #ffa02f);
-    color: white;
-    padding-left: 4px;
-    border: 1px solid #6c6c6c;
-    spacing: 3px;
-} */
 
 QProgressBar
 {
@@ -160,58 +138,3 @@ QProgressBar::chunk
     background-color: rgb(53, 53, 255);
     margin: 2px;
 }
-
-/* QTabWidget::pane {
-    border: 1px solid #444;
-    top: 1px;
-}
-
-QTabBar::tab {
-    color: #b1b1b1;
-    border: 1px solid #444;
-    border-bottom-style: none;
-    background-color: #323232;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 3px;
-    padding-bottom: 2px;
-    margin-right: -1px;
-}
-
-QTabBar::tab:last
-{
-    margin-right: 0;
-    border-top-right-radius: 3px;
-}
-
-QTabBar::tab:first:!selected
-{
- margin-left: 0px;
-
-
-    border-top-left-radius: 3px;
-}
-
-QTabBar::tab:!selected
-{
-    color: #b1b1b1;
-    border-bottom-style: solid;
-    margin-top: 3px;
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:.4 #343434);
-}
-
-QTabBar::tab:selected
-{
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    margin-bottom: 0px;
-}
-
-QTabBar::tab:!selected:hover
-{
-    border-top: 2px solid #ffaa00;
-    padding-bottom: 3px;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    background-color: QLinearGradient(x1:0, y1:0, x2:0, y2:1, stop:1 #212121, stop:0.4 #343434, stop:0.2 #343434, stop:0.1 #ffaa00);
-} */
