--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>709</width>
-    <height>605</height>
+    <width>1131</width>
+    <height>796</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,63 +30,6 @@
        </sizepolicy>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item alignment="Qt::AlignHCenter">
-        <widget class="QLabel" name="label_3">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>150</width>
-           <height>40</height>
-          </size>
-         </property>
-         <property name="pixmap">
-          <pixmap>logo-white.png</pixmap>
-         </property>
-         <property name="scaledContents">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Fixed</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>0</width>
-           <height>5</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pb_player">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>200</width>
-           <height>70</height>
-          </size>
-         </property>
-         <property name="text">
-          <string>Rosbag Player</string>
-         </property>
-        </widget>
-       </item>
        <item>
         <widget class="QPushButton" name="pb_nodemon">
          <property name="sizePolicy">
@@ -126,13 +69,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pb_launcher">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
+        <widget class="QPushButton" name="pb_param">
          <property name="minimumSize">
           <size>
            <width>200</width>
@@ -140,7 +77,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Node Launcher</string>
+          <string>ROS Param</string>
          </property>
         </widget>
        </item>
@@ -175,13 +112,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pb_setting">
-         <property name="text">
-          <string>Settings</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
